Keyed Particles don't render correctly when used for point density input #47214

Closed
opened 2016-01-20 15:04:00 +01:00 by Frederik Steinmetz · 6 comments

System Information
Windows 10, NVIDIA GeForce 980 (But rendered on CPU)

Blender Version
2.76b official

Short description of error
When using keyed particles for point densiy a "halfway-between state" of the simulation is passed to the point density input, so it does not look like the preview
KeyedParticlesPointDensity.JPG

Exact steps for others to reproduce the error
See attached blendfile preview render
KeyedBug.blend

**System Information** Windows 10, NVIDIA GeForce 980 (But rendered on CPU) **Blender Version** 2.76b official **Short description of error** When using keyed particles for point densiy a "halfway-between state" of the simulation is passed to the point density input, so it does not look like the preview ![KeyedParticlesPointDensity.JPG](https://archive.blender.org/developer/F275325/KeyedParticlesPointDensity.JPG) **Exact steps for others to reproduce the error** See attached blendfile preview render [KeyedBug.blend](https://archive.blender.org/developer/F275324/KeyedBug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @FrederikSteinmetz

Added subscriber: @FrederikSteinmetz
Sergey Sharybin was assigned by Aaron Carlisle 2016-01-21 16:42:02 +01:00
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

This issue was referenced by 8126b0222d

This issue was referenced by 8126b0222d11e68b62f1d3d975ec6396b7e87af2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@88116a5536

This issue was referenced by blender/cycles@88116a5536722d0046777c78d007cfd59b872b88
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47214
No description provided.