Fix T47214: Keyed Particles don't render correctly when used for point density input

The issue was caused by different AABB used by Cycles and texture sampler.

Instead of trying to keep this two functions in sync we now do have an
utility call in the point density node to query the AABB.