intern/cycles/blender/blender_texture.h
@@ -22,7 +22,9 @@
 
 CCL_NAMESPACE_BEGIN
 
-void point_density_texture_space(BL::ShaderNodeTexPointDensity b_point_density_node,
+void point_density_texture_space(BL::Scene b_scene,
+                                 BL::ShaderNodeTexPointDensity b_point_density_node,
+                                 const int settings,
                                  float3& loc,
                                  float3& size);
 
